ETH-T42–T47: W4A/W4B hardening wave
T42: sanitize auth callback return paths (open-redirect fix).
T44: production profile gates actuator/swagger exposure.
T45: log 500s with errorId; map NoResourceFound to 404.
T43: per-IP rate limits on audit/wallet/agent; audit single-flight.
T47: /api/yields serves ingested rates with live/seed_fallback modes.

OpenAPI snapshot and generated TS types updated; make test green.